# meltano-etl-pipeline

./: README.md
meltano-etl-pipeline/: meltano.yml
meltano-etl-pipeline/transform/models/tap_spacex/: capsules.sql  cores.sql  crew.sql  dragons.sql  landpads.sql  launches.sql  laundpads.sql  payloads.sql  rockets.sql  ships.sql  source.yml  starlink.sql
postgres_db/: docker-compose.yml
tap-spacex/: LICENSE  README.md  meltano.yml  pyproject.toml
tap-spacex/tap_spacex/: __init__.py  client.py  streams.py  tap.py
tap-spacex/tests/: __init__.py  test_core.py
