[tool.poetry]
name = "tap-spacex"
version = "0.0.1"
description = "`tap-spacex` is a Singer tap for spacex, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Goke <odubanjogoke86@gmail.com>"]
keywords = [
    "ELT",
    "spacex",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.34.0b1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.34.0b1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
src = ["tap_spacex"]
target-version = "py37"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_spacex"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-spacex = 'tap_spacex.tap:Tapspacex.cli'
